Added document visualizations support.